# retail-data-pipeline

./: README.md  main.py  pyproject.toml  requirements.txt
data/processed/: agg_data.csv  clean_data.csv
src/: __init__.py  business.py  etl.py
tests/: test_business.py  test_etl.py
